# opencv-dnn-YOLOv5

./: .gitignore  CMakeLists.txt
demo/: main.cpp
inc/: detect.h
src/: detect.cpp  main.cpp
